--- a/week-2/12-justify-content/flexbox.css
+++ b/week-2/12-justify-content/flexbox.css
@@ -7,3 +7,20 @@
 }
 
 /* Add your own CSS code below */
+.countries--first {
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.countries--second {
+  flex-direction: row;
+  justify-content: space-around;
+}
+.countries--third {
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.countries--fourth {
+  flex-direction: column;
+  justify-content: space-around;
+}
